--- a/Home/src/main/res/layout/item_meme.xml
+++ b/Home/src/main/res/layout/item_meme.xml
@@ -1,19 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent"
+    android:paddingVertical="@dimen/_16dp">
 
-<androidx.cardview.widget.CardView
-    android:layout_width="match_parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    android:layout_height="@dimen/_300dp">
-    <ImageView
-        android:id="@+id/memeImg"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-</androidx.cardview.widget.CardView>
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/_16dp">
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/black"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/memeImg"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:minHeight="800dp"
+                    android:visibility="gone" />
+
+                <androidx.media3.ui.PlayerView
+                    android:id="@+id/playerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_500dp"
+                    app:resize_mode="fit"
+                    app:use_controller="false" />
+
+                <androidx.media3.ui.PlayerControlView
+                    android:id="@+id/memeVideo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+                <!-- <LinearLayout
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:visibility="gone"
+                     android:padding="@dimen/_8dp"
+                     android:orientation="horizontal">
+
+                     <ImageView
+                         android:id="@+id/like"
+                         android:layout_width="@dimen/_36dp"
+                         android:tag="@drawable/ic_unlike"
+                         android:layout_height="@dimen/_36dp"
+                         android:src="@drawable/ic_unlike" />
+
+                     <ImageView
+                         android:id="@+id/share"
+                         android:layout_width="@dimen/_36dp"
+                         android:layout_height="@dimen/_36dp"
+                         android:layout_marginStart="@dimen/_16dp"
+                         android:src="@drawable/ic_share" />
+                 </LinearLayout>-->
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+        </androidx.cardview.widget.CardView>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
