--- a/Home/src/main/res/values/dimens.xml
+++ b/Home/src/main/res/values/dimens.xml
@@ -3,4 +3,18 @@
     <dimen name="_100dp">100dp</dimen>
     <dimen name="_300dp">300dp</dimen>
     <dimen name="_16dp">16dp</dimen>
+    <dimen name="_8dp">8dp</dimen>
+    <dimen name="_500dp">500dp</dimen>
+    <dimen name="_400dp">400dp</dimen>
+    <dimen name="_36dp">36dp</dimen>
+    <dimen name="_4dp">4dp</dimen>
+    <dimen name="_2dp">2dp</dimen>
+    <dimen name="_1dp">1dp</dimen>
+    <dimen name="_6dp">6dp</dimen>
+    <dimen name="_0dp">0dp</dimen>
+    <dimen name="_50dp">50dp</dimen>
+    <dimen name="_79dp">79dp</dimen>
+    <dimen name="_80dp">80dp</dimen>
+    <dimen name="_60dp">60dp</dimen>
+    <dimen name="_32dp">32dp</dimen>
 </resources>
