--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey_d9d9d9">#d9d9d9</color>
+    <color name="orange_FF6421">#FF6421</color>
 </resources>
